--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="600sp"/>
 
+    <Button
+        android:id="@+id/btn_capture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="take"
+        android:layout_gravity="center"/>
+
 </LinearLayout>
