--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,15 @@
     <TextureView
         android:id="@+id/tev_preview"
         android:layout_width="match_parent"
-        android:layout_height="600sp"/>
+        android:layout_height="match_parent"/>
 
-    <Button
+    <ImageButton
+        android:scaleType="fitXY"
+        android:background="@mipmap/shutter128"
         android:id="@+id/btn_capture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="take"
-        android:layout_gravity="center"/>
+        android:layout_width="95dp"
+        android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="-110dp"/>
 
 </LinearLayout>
