--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,5 +20,12 @@
         android:layout_height="90dp"
         android:layout_gravity="center"
         android:layout_marginTop="-110dp"/>
+    <ImageButton
+        android:id="@+id/btn_displayThumbnail"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="-90dp"
+        android:layout_marginRight="20dp"/>
 
 </LinearLayout>
